# aws-echo-lambda

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/actions/setup-env/: action.yaml
.github/workflows/: aws_echo_lambda.yaml  deploy.yaml  deploy_pipeline.yaml  jekyll_gh_pages.yml  main_pipeline.yaml
config/: bandit.config  mypy.ini  pylintrc  testspylintrc
docker/: Dockerfile  README.md  docker-compose.yaml
docker/localstack/: init_resources.sh
docs/: Makefile  code-doc.rst  conf.py  index.md  index.rst
docs/_static/: README.MD  log.xcf
src/: main.py
tests/unit/: conftest.py  test_main.py
